--- a/workspaces/mamonde_main/index.html
+++ b/workspaces/mamonde_main/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div id="wrap">
-      <!-- layout__top -->
+      <!-- layout-top -->
         <div class="layout-top">
           <div class="section-main-banner">
             <div class="section-inner">
@@ -82,22 +82,50 @@
                   <img src="./img/mamonde_main_icon_recommend_01.png" alt="Recommended"/>
                 </span>
               </div>
-              <div class="section__main-contents">
-                <div class="text-wrap">
-                  <span class="text-wrap__tag--bg-yellow">#저자극탄력</span>
-                  <span class="text-wrap__tag">#장벽 강화</span>
-                  <span class="text-wrap__tag">#자극 진정</span>
-                  <span class="text-wrap__tag">#100시간 보습력</span>
+              <div class="section-main-contents">
+                <div class="tag-wrap">
+                  <span class="tag-wrap__tag tag-wrap__tag--bg-yellow">#저자극탄력</span>
+                  <span class="tag-wrap__tag">#장벽 강화</span>
+                  <span class="tag-wrap__tag">#자극 진정</span>
+                  <span class="tag-wrap__tag">#100시간 보습력</span>
                 </div>
                 <img src="./img/mamonde_main_layout_body_rolling_img.jpg" alt="" class="navi-bar">
                 <div class="prd-list-box">
                   <ul class="prd-list-wrap">
                     <li class="list">
                       <a href="#">
-                        <img src="./img/mamonde_main_layout_body_detail_img_01.jpg" alt="제품명">
+                        <img src="./img/mamonde_main_layout_body_detail_img_01.jpg" alt="바쿠치올 레티놀 크림">
                       </a>
                       <div class="list-text">
-                        <p>바쿠치올레티놀크림~~~~</p>
+                        <p class="list-text__title">바쿠치올 레티놀 크림</p>
+                        <p class="list-text__desc">바쿠치올과 순수레티놀의 황금 비율 <br>저자극 수분 탄력 크림</p>
+                      </div>
+                    </li>
+                    <li class="list">
+                      <a href="#">
+                        <img src="./img/mamonde_main_layout_body_detail_img_02.jpg" alt="프로바이오틱스 세라마이드 크림">
+                      </a>
+                      <div class="list-text">
+                        <p class="list-text__title">프로바이오틱스 세라마이드 크림</p>
+                        <p class="list-text__desc">플로럴바이오틱스<sup>TM</sup>와 7겹 세라마이드 <br>로 기본부터 탄탄한 건강 장벽 개선</p>
+                      </div>
+                    </li>
+                    <li class="list">
+                      <a href="#">
+                        <img src="./img/mamonde_main_layout_body_detail_img_03.jpg" alt="블루 캐모마일 크림">
+                      </a>
+                      <div class="list-text">
+                        <p class="list-text__title">블루 캐모마일 크림</p>
+                        <p class="list-text__desc">블루 캐모마일 추출물과 히아루론산의 <br>저자극 수분 진정 크림</p>
+                      </div>
+                    </li>
+                    <li class="list">
+                      <a href="#">
+                        <img src="./img/mamonde_main_layout_body_detail_img_04.jpg" alt="비타민 판테놀 10 크림">
+                      </a>
+                      <div class="list-text">
+                        <p class="list-text__title">비타민 판테놀 10 크림</p>
+                        <p class="list-text__desc">10% 고함량 판테놀X비타민 포뮬러의 <br>100시간 보습 지속력</p>
                       </div>
                     </li>
                   </ul>
