푸터영역전까지 작업완료

--- a/workspaces/mamonde_main/index.html
+++ b/workspaces/mamonde_main/index.html
@@ -93,39 +93,47 @@
                 <div class="prd-list-box">
                   <ul class="prd-list-wrap">
                     <li class="list">
-                      <a href="#">
-                        <img src="./img/mamonde_main_layout_body_detail_img_01.jpg" alt="바쿠치올 레티놀 크림">
-                      </a>
-                      <div class="list-text">
-                        <p class="list-text__title">바쿠치올 레티놀 크림</p>
-                        <p class="list-text__desc">바쿠치올과 순수레티놀의 황금 비율 <br>저자극 수분 탄력 크림</p>
+                      <div class="list-area">
+                        <a class="list-img" href="#">
+                          <img src="./img/mamonde_main_layout_body_detail_img_01.jpg" alt="바쿠치올 레티놀 크림">
+                        </a>
+                        <div class="list-text">
+                          <p class="list-text__title">바쿠치올 레티놀 크림</p>
+                          <p class="list-text__desc">바쿠치올과 순수레티놀의 황금 비율 <br>저자극 수분 탄력 크림</p>
+                        </div>
+                    </div>
+                    </li>
+                    <li class="list">
+                      <div class="list-area">
+                        <a class="list-img" href="#">
+                          <img src="./img/mamonde_main_layout_body_detail_img_02.jpg" alt="프로바이오틱스 세라마이드 크림">
+                        </a>
+                        <div class="list-text">
+                          <p class="list-text__title">프로바이오틱스 세라마이드 크림</p>
+                          <p class="list-text__desc">플로럴바이오틱스<sup>TM</sup>와 7겹 세라마이드 <br>로 기본부터 탄탄한 건강 장벽 개선</p>
+                        </div>
                       </div>
                     </li>
                     <li class="list">
-                      <a href="#">
-                        <img src="./img/mamonde_main_layout_body_detail_img_02.jpg" alt="프로바이오틱스 세라마이드 크림">
-                      </a>
-                      <div class="list-text">
-                        <p class="list-text__title">프로바이오틱스 세라마이드 크림</p>
-                        <p class="list-text__desc">플로럴바이오틱스<sup>TM</sup>와 7겹 세라마이드 <br>로 기본부터 탄탄한 건강 장벽 개선</p>
+                      <div class="list-area">
+                        <a class="list-img" href="#">
+                          <img src="./img/mamonde_main_layout_body_detail_img_03.jpg" alt="블루 캐모마일 크림">
+                        </a>
+                        <div class="list-text">
+                          <p class="list-text__title">블루 캐모마일 크림</p>
+                          <p class="list-text__desc">블루 캐모마일 추출물과 히아루론산의 <br>저자극 수분 진정 크림</p>
+                        </div>
                       </div>
                     </li>
                     <li class="list">
-                      <a href="#">
-                        <img src="./img/mamonde_main_layout_body_detail_img_03.jpg" alt="블루 캐모마일 크림">
-                      </a>
-                      <div class="list-text">
-                        <p class="list-text__title">블루 캐모마일 크림</p>
-                        <p class="list-text__desc">블루 캐모마일 추출물과 히아루론산의 <br>저자극 수분 진정 크림</p>
-                      </div>
-                    </li>
-                    <li class="list">
-                      <a href="#">
-                        <img src="./img/mamonde_main_layout_body_detail_img_04.jpg" alt="비타민 판테놀 10 크림">
-                      </a>
-                      <div class="list-text">
-                        <p class="list-text__title">비타민 판테놀 10 크림</p>
-                        <p class="list-text__desc">10% 고함량 판테놀X비타민 포뮬러의 <br>100시간 보습 지속력</p>
+                      <div class="list-area">
+                        <a class="list-img" href="#">
+                          <img src="./img/mamonde_main_layout_body_detail_img_04.jpg" alt="비타민 판테놀 10 크림">
+                        </a>
+                        <div class="list-text">
+                          <p class="list-text__title">비타민 판테놀 10 크림</p>
+                          <p class="list-text__desc">10% 고함량 판테놀X비타민 포뮬러의 <br>100시간 보습 지속력</p>
+                        </div>
                       </div>
                     </li>
                   </ul>
@@ -143,20 +151,54 @@
                   <img src="./img/mamonde_main_icon_recommend_02.png" alt="Recommended"/>
                 </span>
               </div>
-              <div class="section__main-contents">
-                <img src="./img/mamonde_main_layout_body_img_02.jpg" alt="" />
+              <div class="section-main-contents">
+                <div class="text-wrap">
+                  <span class="text-wrap__num">01</span>
+                  <p class="text-wrap__title">NEW 로즈앰플</p>
+                  <div class="tag-wrap">
+                    <span class="tag-wrap__tag">#수분광수직끌올</span> <br>
+                    <span class="tag-wrap__tag">#로즈마스크증정</span>
+                  </div>
+                  <a href="#" class="btn btn-view-more">자세히보기</a>
+                </div>
+                <img src="./img/mamonde_main_layout_body_rolling_img.jpg" alt="" class="navi-bar">
+                <div class="prd-list-box">
+                  <ul class="prd-list-wrap">
+                    <li class="list">
+                      <a class="list-img" href="#">
+                        <img src="./img/mamonde_main_layout_body_detail_img_05.jpg" alt="Rose Ampoules">
+                      </a>
+                    </li>
+                    <li class="list">
+                      <a class="list-img" href="#">
+                        <img src="./img/mamonde_main_layout_body_detail_img_06.jpg" alt="Rose PHA Liquid Mask">
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </div>
           </section>
           <!--// Mamonde Exclusive -->
-          <!-- Brand Story -->
+          <!-- Brand Story --> 
           <section class="section-content brand-story">
             <div class="section-inner">
-              <div class="section-tit-box">
+              <div class="section-tit-box"> 
                 <h2 class="section-title">Brand Story</h2>
               </div>
               <div class="section-brand-story-contents">
-                <img src="./img/mamonde_main_layout_body_img_03.jpg" alt="" />
+                <div class="contents-wrap">
+                  <div class="img-wrap">
+                    <img src="./img/mamonde_main_layout_body_detail_img_07.jpg" alt="바쿠치올 레티놀 크림, 프로바이오틱스 세라마이드 크림, 블루 캐모마일 크림, 비타민 판테놀 10 크림">
+                  </div>
+                  <div class="text-box">
+                    <div class="text-wrap">
+                      <p class="text-wrap__desc">'나의 세계'에 집중할 수 있도록 <br>피부 고민은 마몽드가 할게요.</p>
+                      <p class="text-wrap__desc">간결하게 확실하게, 가장 나다운 아름다움</p>
+                      <a href="#" class="btn btn-view-more">자세히보기</a>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </section>
@@ -168,7 +210,12 @@
                 <h2 class="section-title">With #Mamonde</h2>
               </div>
               <div class="section-with-contents">
-                <img src="./img/mamonde_main_layout_body_img_04.jpg" alt="" />
+               <div class="img-wrap">
+                <img src="./img/mamonde_main_layout_body_detail_img_08.jpg" alt="제품 사용 후기">
+               </div>
+               <div class="btn-wrap">
+                <a class="btn-more" href="#">자세히 보기</a>
+               </div>
               </div>
             </div>
           </section>
