--- a/workspaces/mamonde_main/index.html
+++ b/workspaces/mamonde_main/index.html
@@ -54,9 +54,9 @@
                 </div>
               </header>
               <section class="section-main-visual">
-                <div class="main-title">
-                  <em class="main-title__b-text"> NEW 로즈 하이드라 <br> 글로리 앰플</em>
-                  <span class="main-title__text">한 겹으로 한 결 다른 고밀도 수분광</span>
+                <div class="main-title-wrap">
+                  <em class="main-title main-title--b-text"> NEW 로즈 하이드라 <br> 글로리 앰플</em>
+                  <span class="main-title main-title--text">한 겹으로 한 결 다른 고밀도 수분광</span>
                 </div>
                 <a class="btn-more" href="#">
                   <span class="btn-more__txt"> 자세히 보기 </span>
@@ -76,7 +76,7 @@
           <!-- Skincare Solution -->
           <section class="section-content skincare-solution">
             <div class="section-inner">
-              <div class="section-tit-box">
+              <div class="section-title-wrap">
                 <h2 class="section-title">Skincare Solution</h2>
                 <span class="section-highlight">
                   <img src="./img/mamonde_main_icon_recommend_01.png" alt="Recommended"/>
@@ -93,46 +93,46 @@
                 <div class="prd-list-box">
                   <ul class="prd-list-wrap">
                     <li class="list">
-                      <div class="list-area">
-                        <a class="list-img" href="#">
+                      <div class="list-detail">
+                        <a class="list-detail__list-img" href="#">
                           <img src="./img/mamonde_main_layout_body_detail_img_01.jpg" alt="바쿠치올 레티놀 크림">
                         </a>
-                        <div class="list-text">
-                          <p class="list-text__title">바쿠치올 레티놀 크림</p>
-                          <p class="list-text__desc">바쿠치올과 순수레티놀의 황금 비율 <br>저자극 수분 탄력 크림</p>
+                        <div class="list-detail__list-text">
+                          <p class="list-detail__list-text--title">바쿠치올 레티놀 크림</p>
+                          <p class="list-detail__list-text--desc">바쿠치올과 순수레티놀의 황금 비율 <br>저자극 수분 탄력 크림</p>
                         </div>
                     </div>
                     </li>
                     <li class="list">
-                      <div class="list-area">
-                        <a class="list-img" href="#">
+                      <div class="list-detail">
+                        <a class="list-detail__list-img" href="#">
                           <img src="./img/mamonde_main_layout_body_detail_img_02.jpg" alt="프로바이오틱스 세라마이드 크림">
                         </a>
-                        <div class="list-text">
-                          <p class="list-text__title">프로바이오틱스 세라마이드 크림</p>
-                          <p class="list-text__desc">플로럴바이오틱스<sup>TM</sup>와 7겹 세라마이드 <br>로 기본부터 탄탄한 건강 장벽 개선</p>
+                        <div class="list-detail__list-text">
+                          <p class="list-detail__list-text--title">프로바이오틱스 세라마이드 크림</p>
+                          <p class="list-detail__list-text--desc">플로럴바이오틱스<sup>TM</sup>와 7겹 세라마이드 <br>로 기본부터 탄탄한 건강 장벽 개선</p>
                         </div>
                       </div>
                     </li>
                     <li class="list">
-                      <div class="list-area">
-                        <a class="list-img" href="#">
+                      <div class="list-detail">
+                        <a class="list-detail__list-img" href="#">
                           <img src="./img/mamonde_main_layout_body_detail_img_03.jpg" alt="블루 캐모마일 크림">
                         </a>
-                        <div class="list-text">
-                          <p class="list-text__title">블루 캐모마일 크림</p>
-                          <p class="list-text__desc">블루 캐모마일 추출물과 히아루론산의 <br>저자극 수분 진정 크림</p>
+                        <div class="list-detail__list-text">
+                          <p class="list-detail__list-text--title">블루 캐모마일 크림</p>
+                          <p class="list-detail__list-text--desc">블루 캐모마일 추출물과 히아루론산의 <br>저자극 수분 진정 크림</p>
                         </div>
                       </div>
                     </li>
                     <li class="list">
-                      <div class="list-area">
-                        <a class="list-img" href="#">
+                      <div class="list-detail">
+                        <a class="list-detail__list-img" href="#">
                           <img src="./img/mamonde_main_layout_body_detail_img_04.jpg" alt="비타민 판테놀 10 크림">
                         </a>
-                        <div class="list-text">
-                          <p class="list-text__title">비타민 판테놀 10 크림</p>
-                          <p class="list-text__desc">10% 고함량 판테놀X비타민 포뮬러의 <br>100시간 보습 지속력</p>
+                        <div class="list-detail__list-text">
+                          <p class="list-detail__list-text--title">비타민 판테놀 10 크림</p>
+                          <p class="list-detail__list-text--desc">10% 고함량 판테놀X비타민 포뮬러의 <br>100시간 보습 지속력</p>
                         </div>
                       </div>
                     </li>
@@ -145,7 +145,7 @@
           <!-- Mamonde Exclusive -->
           <section class="section-content mamonde-exclusive">
             <div class="section-inner">
-              <div class="section-tit-box">
+              <div class="section-title-wrap">
                 <h2 class="section-title">Mamonde Exclusive</h2>
                 <span class="section-highlight">
                   <img src="./img/mamonde_main_icon_recommend_02.png" alt="Recommended"/>
@@ -164,13 +164,13 @@
                 <img src="./img/mamonde_main_layout_body_rolling_img.jpg" alt="" class="navi-bar">
                 <div class="prd-list-box">
                   <ul class="prd-list-wrap">
-                    <li class="list">
-                      <a class="list-img" href="#">
+                    <li class="list-detail">
+                      <a class="list-detail__list-img" href="#">
                         <img src="./img/mamonde_main_layout_body_detail_img_05.jpg" alt="Rose Ampoules">
                       </a>
                     </li>
-                    <li class="list">
-                      <a class="list-img" href="#">
+                    <li class="list-detail">
+                      <a class="list-detail__list-img" href="#">
                         <img src="./img/mamonde_main_layout_body_detail_img_06.jpg" alt="Rose PHA Liquid Mask">
                       </a>
                     </li>
@@ -206,7 +206,7 @@
           <!-- With #Mamonde -->
           <section class="section-content with-mamonde">
             <div class="section-inner">
-              <div class="section-tit-box">
+              <div class="section-title-wrap">
                 <h2 class="section-title">With #Mamonde</h2>
               </div>
               <div class="section-with-contents">
@@ -224,7 +224,59 @@
         <!--// layout__body -->
         <!-- layout__footer -->
         <footer class="layout-footer">
-          <img src="./img/mamonde_main_layout_footer_img_01.jpg" alt="" />
+          <div class="footer-inner">
+            <ul class="sns-wrap">
+              <li class="sns-wrap__list sns-wrap__list--facebook">
+                <a href="#">
+                  <img src="./img/icon_facebook.png" alt="페이스북">
+                </a>
+              </li>
+              <li class="sns-wrap__list sns-wrap__list--instagram">
+                <a href="#">
+                  <img src="./img/icon_instagram.png" alt="인스타그램">
+                </a>
+              </li>
+              <li class="sns-wrap__list sns-wrap__list--youtube">
+                <a href="#">
+                  <img src="./img/icon_youtube.png" alt="유튜브">
+                </a>
+              </li>
+            </ul>
+            <div class="f-gnb-wrap">
+              <ul class="f-gnb">
+                <li class="f-gnb__gnb-list">
+                  <a href="#">회사소개</a>
+                </li>
+                <li class="f-gnb__gnb-list">
+                  <a href="#">서비스이용약관</a>
+                </li>
+                <li class="f-gnb__gnb-list">
+                  <a href="#">UGC 이용약관</a>
+                </li>
+                <li class="f-gnb__gnb-list f-gnb__gnb-list--bold">
+                  <a href="#">개인정보처리방침</a>
+                </li>
+                <li class="f-gnb__gnb-list">
+                  <a href="#">영상정보처리방침</a>
+                </li>
+                <li class="f-gnb__gnb-list">
+                  <a href="#">뷰티포인트</a>
+                </li>
+              </ul>
+              <p class="center-info">
+                고객서비스센터(수신자요금부담) 080-023-5454 (월~금 : AM 09:00 ~ PM 06:00)
+              </p>
+              <p class="copy-right">
+                © AMOREPACIFIC CORPORATION. All rights reserved.
+              </p>
+            </div>
+            <div class="img-wrap">
+              <img src="./img/mamonde_main_layout_footer_language.jpg" alt="">
+            </div>
+            <div class="wa-mark">
+              <img src="./img/wa_mark.png" alt="(사)한국장애인단체총연합회 한국웹접근성인증평가원 웹 접근성 우수사이트 인증마크(WA인증마크)">
+            </div>
+          </div>
         </footer>
         <!--// layout__footer -->
     </div>
