--- a/workspaces/rsp-game/index.html
+++ b/workspaces/rsp-game/index.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>가위바위보 게임</title>
-    <link rel="stylesheet" href="./css/rsp.scss">
-    <script src="./js/rsp.js"></script>
+
+    <style>
+        #computer {
+    width: 142px;
+    height: 200px;
+}
+    </style>
 </head>
 <body>
     <div id="computer"></div>
@@ -15,8 +20,6 @@
         <button id="rock" class="btn">바위</button>
         <button id="paper" class="btn">보</button>
     </div>
-    <div class="score">0</div>
-
-  
+    <div class="score">0</div>  
 </body>
 </html>
