이미지 폴더 삭제/ 경로변경

--- a/workspaces/rsp-game/index.html
+++ b/workspaces/rsp-game/index.html
@@ -8,9 +8,9 @@
 
     <style>
         #computer {
-    width: 142px;
-    height: 200px;
-}
+            width: 142px;
+            height: 200px;
+        }
     </style>
 </head>
 <body>
@@ -23,3 +23,8 @@
     <div class="score">0</div>  
 </body>
 </html>
+
+<script>
+    const IMG_URL = './rsp.png';
+    $computer.style.background = 'url(${IMG_URL}) -446px 0';
+</script>
