--- a/workspaces/rsp-game/index.html
+++ b/workspaces/rsp-game/index.html
@@ -10,6 +10,9 @@
         #computer {
             width: 142px;
             height: 200px;
+            background: url('./img/rsp.png') 0 0;
+            background-size: cover;
+            background-repeat: no-repeat;
         }
     </style>
 </head>
@@ -25,6 +28,4 @@
 </html>
 
 <script>
-    const IMG_URL = './rsp.png';
-    $computer.style.background = 'url(${IMG_URL}) -446px 0';
 </script>
