--- a/workspaces/rsp-game/index.html
+++ b/workspaces/rsp-game/index.html
@@ -10,9 +10,6 @@
         #computer {
             width: 142px;
             height: 200px;
-            background: url('./img/rsp.png') 0 0;
-            background-size: cover;
-            background-repeat: no-repeat;
         }
     </style>
 </head>
@@ -23,9 +20,43 @@
         <button id="rock" class="btn">바위</button>
         <button id="paper" class="btn">보</button>
     </div>
-    <div class="score">0</div>  
+    <div id="score">0</div>  
 </body>
 </html>
 
 <script>
+    const $computer = document.querySelector("#computer");
+    const $score = document.querySelector("#score");
+    const $rock = document.querySelector("#rock");
+    const $scissors = document.querySelector("#scissors");
+    const $paper = document.querySelector("#paper");
+    const IMG_URL = './img/rsp.png';
+    $computer.style.background = `url(${IMG_URL}) -464px 0`;
+    $computer.style.backgroundSize = 'auto 200px';
+
+    const rspX = {
+    scissors: '0', // 가위
+    rock: '-220px', // 바위
+    paper: '-440px', // 보
+    };
+
+    let computerChoice = 'scissors';
+    const changeComputerHand = () => {
+    if (computerChoice === 'rock') { 
+      computerChoice = 'scissors';
+    } else if (computerChoice === 'scissors') { 
+      computerChoice = 'paper';
+    } else if (computerChoice === 'paper') {
+      computerChoice = 'rock';
+    }
+    $computer.style.background = `url(${IMG_URL}) ${rspX[computerChoice]} 0`;
+    $computer.style.backgroundSize = 'auto 200px';
+  }
+  let intervalId = setInterval(changeComputerHand, 1000);
+
+    const scoreTable = {
+        rock: 0,
+        scissors: 1,
+        paper: -1,
+    };
 </script>
