--- a/workspaces/rsp-game/index.html
+++ b/workspaces/rsp-game/index.html
@@ -59,9 +59,36 @@
         scissors: 1,
         paper: -1,
     };
-
     let clickable = true;
-    let score = 0;
+    let score = 0
+    const clickButton = (event) => {
+        if (clickable) {
+            clearInterval(intervalId);
+            clickable = false;
+            //점수 계산 및 화면 표시
+            const myChoice = event.target.textContent === '바위'
+            ? 'rock'
+            :event.target.textContent === '가위'
+                ? 'scissors'
+                : 'paper';
+            const myScore = scoreTable[myChoice];
+            const computerChoice = scoreTable[computerChoice];
+            const diff = myScore - computerChoice;
+
+            let message;
+            //2, -1은 승리조건이고, -2,1은 패배조건
+            if ([2, -1].includes(diff)) {
+                score += 1;
+                message = '승리';
+            } else if ([-2, 1].includes(diff)) {
+                score -= 1; 
+                message = '패배';
+            } else  {
+                message = '무승부';
+            }
+            $score.textContent = '${message} 총: ${score}점';
+        }
+    } 
     const clickButton = () => { //클릭버튼 함수
         clearInterval(intervalId); //간격 click하면 화면멈춤
         //화면 다시 활성화
